# VCS.Rainbomizer

./: CMakeLists.txt  README.md  linkfile.prx
cmake/: DebugImgui.cmake  imgui.cmake
kernel/: CMakeLists.txt  main.c
lib/: CCarGenerator.cc  CCarGenerator.hh  CPed.hh  CPickups.hh  CPlayer.hh  CStreaming.cc  CStreaming.hh  CVector.hh  CVehicle.hh  CWeaponInfo.hh  ContainerUtils.hh  GhidraTypes.hh  Hooks.hh  Random.cc  Random.hh  Utils.hh
lib/hooks/: Hooks.hh  Jal.hh  Jmp.hh  Opcode.hh
lib/memory/: Cache.cc  Cache.hh  GameAddress.hh  Memory.cc  Memory.hh  MemorySignature.hh  Pattern.hh  PatternList.hh  ThreadManager.cc  ThreadManager.hh
lib/ppsspp/: KeyCodes.h  Keyboard.hh
lib/scm/: Command.hh  Globals.hh  Opcodes.hh
lib/utils/: ContainerUtils.hh  Random.cc  Random.hh  Utils.hh
lib/vcs/: CCarGenerator.hh  CDarkel.hh  CKeyGen.hh  CMatrix.hh  CModelInfo.hh  CPed.hh  CPickups.hh  CPlayer.hh  CRunningScript.hh  CStreaming.cc  CStreaming.hh  CText.hh  CTimer.hh  CVector.hh  CVehicle.hh  CWeaponInfo.hh  Rsl.hh  RslTexture.hh  eMissions.hh
psp/: CMakeLists.txt  mips.h  patterns.c
src/: CutsceneRandomizer.cc  MissionRandomizer.cc  ParkedVehicleRandomizer.cc  PedRandomizer.cc  PickupsRandomizer.cc  PlayerRandomizer.cc  ScriptVehicleRandomizer.cc  ScriptVehicleRandomizer.hh  TrafficRandomizer.cc  WeaponRandomizer.cc  main.cc
src/chunks/: ChunkInfo.cc  ChunkInfo.hh  ChunkRandomizer.cc  ChunkTunables.hh  ModelFun.cc  ModelFun.hh
src/core/: Common.cc  Common.hh  Config.cc  Config.hh  ConfigDebugHelpers.hh  ConfigMacros.hh  CustomAllocators.cc  Events.cc  Events.hh  Logger.cc  Logger.hh  Randomizer.hh  Stream.cc  Stream.hh  ThreadUtils.cc  ThreadUtils.hh
src/debug/: Anims.cc  Drawer.cc  Drawer.hh  HexEditor.cc  Memory.cc  PlayerWeapons.cc  Script.cc  actions.cc  backend.cc  base.cc  base.hh  config.hh  logger.hh
src/debug/imgui/: Backend.hh  Controller.cc  Interop.hh  Renderer.cc
src/misc/: Autosave.cc  ColourRandomizer.cc  MissionRandomizer.cc  VoiceLineRandomizer.cc
src/ped/: ChunkRandomizer.cc  CutsceneRandomizer.cc  PedRandomizer.cc  PlayerRandomizer.cc
src/scrlog/: ScriptLog.cc
src/vehicle/: Common.hh  ParkedVehicleRandomizer.cc  ScriptVehicleRandomizer.cc  TrafficRandomizer.cc  VehicleGroups.hh  VehiclePatterns.cc  VehiclePatterns.hh
src/weapon/: Common.hh  PickupsRandomizer.cc  WeaponGroupList.hh  WeaponGroups.hh  WeaponPatterns.cc  WeaponPatterns.hh  WeaponRandomizer.cc
